syntax = "proto3";

import "ikipb/iki_iam/iam.proto";

option go_package = "/authsvc";

package authsvc;

service AuthSvc {
  // Login or signup with google.
  // If a user is not yet created, a new user account will be created associated with that email address.
  rpc GoogleLogin (GoogleLoginRequest) returns (GoogleLoginResponse) {}

  rpc ServiceLogin (ServiceLoginRequest) returns (ServiceLoginResponse) {}

  rpc Signout (SignoutRequest) returns (SignoutResponse) {}
}

message GoogleLoginRequest {
  string id_token = 1;
}

message GoogleLoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  iam.User user = 3;
}

message ServiceLoginRequest {
  string client_id = 1;
  string client_secret = 2;
}

message ServiceLoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SignoutRequest {}
message SignoutResponse {}
